swagger updated to v2
